--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="topnav">
-        <a href="index.html">Главная</a>
+        <a href="index.html" class="this-page">Главная</a>
         <a href="services.html">Услуги</a>
         <a href="working.html">Наши работы</a>
         <a href="info.html" style="float:right">О нас</a>
