--- a/info.html
+++ b/info.html
@@ -13,7 +13,7 @@
         <a href="index.html">Главная</a>
         <a href="services.html">Услуги</a>
         <a href="working.html">Наши работы</a>
-        <a href="info.html" style="float:right">О нас</a>
+        <a href="info.html" class="this-page" style="float:right">О нас</a>
     </div>
 
     <div class="row">
