--- a/services.html
+++ b/services.html
@@ -11,7 +11,7 @@
 <body>
     <div class="topnav">
         <a href="index.html">Главная</a>
-        <a href="services.html">Услуги</a>
+        <a href="services.html" class="this-page" >Услуги</a>
         <a href="working.html">Наши работы</a>
         <a href="info.html" style="float:right">О нас</a>
     </div>
