--- a/working.html
+++ b/working.html
@@ -12,7 +12,7 @@
     <div class="topnav">
         <a href="index.html">Главная</a>
         <a href="services.html">Услуги</a>
-        <a href="working.html">Наши работы</a>
+        <a href="working.html" class="this-page">Наши работы</a>
         <a href="info.html" style="float:right">О нас</a>
     </div>
 
