--- a/index.html
+++ b/index.html
@@ -11,45 +11,56 @@
 <body>
     <div class="topnav">
         <a href="index.html" class="this-page">Главная</a>
-        <a href="services.html">Услуги</a>
-        <a href="working.html">Наши работы</a>
+        <a href="services.html"  >Зарегистрироваться на конференцию</a>
         <a href="info.html" style="float:right">О нас</a>
     </div>
 
     <div class="row">
         <div class="leftcolumn">
             <div class="card">
-                <h2>Название компании</h2>
-                <div class="fakeimg" style="height:200px;">Изображение</div>
-                <p>Равным образом постоянный количественный рост и сфера нашей активности играет важную роль в формировании системы обучения кадров, соответствует насущным потребностям. Повседневная практика показывает, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании дальнейших направлений развития.
-                    Идейные соображения высшего порядка, а также укрепление и развитие структуры играет важную роль в формировании существенных финансовых и административных условий. С другой стороны постоянное информационно-пропагандистское обеспечение нашей деятельности обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач.
-                    Значимость этих проблем настолько очевидна, что консультация с широким активом играет важную роль в формировании новых предложений. Идейные соображения высшего порядка, а также дальнейшее развитие различных форм деятельности позволяет оценить значение новых предложений.</p>
+                <h2>Диалог 2020</h2>
+                <img class="center-pic"  src="img/ariNY5jLgQM.jpg" >
+                <p>Диалог 2020
+                    Ежегодная научная конференция по компьютерной лингвистике и интеллектуальным технологиям «Диалог» (26 по счету) впервые прошла в онлайн-формате.
+
+                    За четыре дня исследователи представили около сотни докладов на 14 тематических секциях; на  разные события конференции зарегистрировались более 600 участников – лингвистов, специалистов по анализу данных, инженеров-разработчиков и студентов. «Диалог» остается самой крупной конференцией по своему направлению в России.
+
+                    Помимо секций прошли круглые столы и панельные дискуссии, посвященные самым актуальным проблемам в области обработки естественного языка. Среди обсуждавшихся тем: новые технологические барьеры в этой области Искусственного Интеллекта, создание конкурентных открытых исследовательских ресурсов для анализа Русского Языка, надежность исследований, проводимых на больших Интернет-данных.
+
+                    В частности был представлен и обсужден технологический барьер в компьютерном понимании текстов, новая открытая платформа для сбора ресурсов и методов интеллектуального анализа русского языка RuSuperGlue, новая эффективная открытая библиотека машинного обучения NeoML от компании ABBYY.
+
+                    «Диалог – это зеркало того что сегодня происходит в NLP (Natural Language Processing), одной из самых бурно развивающихся областей Искусственного Интеллекта. Организаторам не нужно придумывать специальных тем для обсуждения, такие темы сами естественно возникают в стремительном потоке событий, в котором участвуют многие тысячи ученых и инженеров во всем мире. Другое дело, что иногда требуется немного замедлить шаг и оглянуться вокруг, сверить планы с коллегами, проанализировать тенденции, не забывая в частности то,  что всегда было особенностью Диалога: междисциплинарный подход и особый интерес к анализу Русского Языка» – комментирует Владимир Селегей,  председатель Программного комитета Диалога, директор департамента перспективных исследований компании ABBYY.
+
+                    Приглашенными докладчиками Диалога всегда были  ученые с мировым именем, связанные с самыми «горячими»  темами исследований. В этом году особый интерес вызвало выступление Манфреда Штеде из Потсдамского университета. Этот ученый известен прежде всего своими исследованиями в области автоматического  анализа  логики текстов, т.н. Argumentation Mining. В своем докладе на "Диалоге" он рассказал о том, как связаны современные исследования аргументативной структуры текстов с практическими задачами автоматического извлечения информации..</p>
                 <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+            </div>
+
+            <div class="card">
+                <h2>Партнёры Диалог 2020</h2>
+                <img class="center-pic"  src="img/3kf-R5so-rA.jpg" >
+
             </div>
         </div>
         <div class="rightcolumn">
-<!--            <div class="card">-->
-<!--                <h2>Обо Мне</h2>-->
-<!--                <div class="fakeimg" style="height:100px;">Изображение</div>-->
-<!--                <p>Какой-то текст обо мне in culpa qui officia deserunt mollit anim..</p>-->
-<!--            </div>-->
+
+
             <div class="card">
-                <h3>Наши партнёры</h3>
-                <div class="fakeimg"><p>Трали вали</p></div>
-                <div class="fakeimg"><p>Трали вали</p></div>
-                <div class="fakeimg"><p>Трали вали</p></div>
+                <h3>Основные партнёры</h3>
+                <div class="fakeimg"><a href="https://github.com/Kazeev">github.com/</a></div>
+
+
             </div>
             <div class="card exile">
                 <h3>Мы в соц.сетях</h3>
-                <a href="#"><p>VK</p></a>
-                <a href="#"><p>Mail</p></a>
-                <a href="#"><p>Instagram</p></a>
+                <a href="https://github.com/Kazeev"><p>VK</p></a>
+                <a href="https://github.com/Kazeev"><p>Mail</p></a>
+                <a href="https://github.com/Kazeev"><p>Instagram</p></a>
             </div>
         </div>
     </div>
 
     <div class="footer">
-        <p>Трали вали 8(985)123-123</p>
+        <p>ООО "Мы тут ни причём"</p>
     </div>
 </body>
 </html>
