--- a/info.html
+++ b/info.html
@@ -11,49 +11,45 @@
 <body>
     <div class="topnav">
         <a href="index.html">Главная</a>
-        <a href="services.html">Услуги</a>
-        <a href="working.html">Наши работы</a>
+        <a href="services.html"  >Зарегистрироваться на конференцию</a>
         <a href="info.html" class="this-page" style="float:right">О нас</a>
     </div>
 
     <div class="row">
         <div class="leftcolumn">
             <div class="card">
-                <h2>Мы тут</h2>
-                <h5>Номер1</h5>
-                <h5>Номер2</h5>
-                <p>Некоторый текст..</p>
-                <h5>Номер3</h5>
-                <h5>Адрес</h5>
-                <p>Некоторый текст..</p>
-                <h5>Адрес</h5>
-                <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A0eafa7155457fa972b4b6511f77672efedbbbdd12c0db2d9bc6b3cadb580b6f6&amp;source=constructor" width="500" height="400" frameborder="0"></iframe></iframe>
+                <h2>Общая информация</h2>
+                <img class="center-pic"  src="img/HB7LEGJEs7s.jpg" >
+                <p> «Диалог» является крупнейшей в России международной научной конференцией по компьютерной лингвистике и ведущим мировым форумом по проблемам компьютерного анализа русского языка с богатыми историческими традициями.
+</br>
+                    Конференция проходит ежегодно с 1995 года и является наследницей проводившегося с середины 70-х годов междисциплинарного семинара «Модели общения».</p>
+                <p>«Диалог» предлагает к обсуждению широкий спектр проблем и практических задач компьютерной лингвистики на всем пути от лингвистического исследования до технологического решения в конечном продукте. Особенное внимание уделяется проблемам моделирования, анализа и создания компьютерных ресурсов для русского языка.
 
+                    В полном соответствии со своим названием конференция является традиционным местом встречи и интенсивного обмена идеями между специалистами в области лингвистики, коммуникации, представления знаний, автоматической обработки текста.
+
+                    Практической целью этого междисциплинарного общения является решение широкого спектра задач автоматической обработки естественного языка. Научная цель заключается в том, чтобы получить теоретические и языковые описания той степени полноты и эксплицитности, которая позволила бы решать вышеуказанные задачи. В этой ориентации инженерной практики на адекватные лингвистические и коммуникативные модели и состоит специфика «Диалога», отличающая его от большинства конференций по компьютерной лингвистике.</p>
             </div>
         </div>
         <div class="rightcolumn">
-<!--            <div class="card">-->
-<!--                <h2>Обо Мне</h2>-->
-<!--                <div class="fakeimg" style="height:100px;">Изображение</div>-->
-<!--                <p>Какой-то текст обо мне in culpa qui officia deserunt mollit anim..</p>-->
-<!--            </div>-->
+
+
             <div class="card">
-                <h3>Наши партнёры</h3>
-                <div class="fakeimg"><p>Трали вали</p></div>
-                <div class="fakeimg"><p>Трали вали</p></div>
-                <div class="fakeimg"><p>Трали вали</p></div>
+                <h3>Основные партнёры</h3>
+                <div class="fakeimg"><a href="https://github.com/Kazeev">github.com/</a></div>
+
+
             </div>
             <div class="card exile">
                 <h3>Мы в соц.сетях</h3>
-                <a href="#"><p>VK</p></a>
-                <a href="#"><p>Mail</p></a>
-                <a href="#"><p>Instagram</p></a>
+                <a href="https://github.com/Kazeev"><p>VK</p></a>
+                <a href="https://github.com/Kazeev"><p>Mail</p></a>
+                <a href="https://github.com/Kazeev"><p>Instagram</p></a>
             </div>
         </div>
     </div>
 
     <div class="footer">
-        <p>Трали вали 8(985)123-123</p>
+        <p>ООО "Мы тут ни причём"</p>
     </div>
 </body>
 </html>
